<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/blue" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/logo_todo" android:layout_width="156dp" android:layout_height="183dp" android:contentDescription="@string/deskripsi" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.051" app:srcCompat="@drawable/logo_todoo"/>
    <TextView android:textSize="30sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/welcome" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/logo_todo"/>
    <TextView android:textColor="#f3f3f3" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:layout_marginBottom="16dp" android:text="@string/tfnama" app:layout_constraintBottom_toTopOf="@+id/etName" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.173" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0"/>
    <EditText android:textColor="@color/white" android:textColorHint="@color/white" android:id="@+id/etName" android:background="@drawable/costume_edittext" android:padding="10dp" android:scrollbars="vertical" android:layout_width="280dp" android:layout_height="49dp" android:layout_marginTop="60dp" android:minHeight="48dp" android:hint="@string/hintname" android:ems="10" android:drawableLeft="@drawable/lock" android:drawablePadding="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.496" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0"/>
    <TextView android:textColor="#f3f3f3" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:text="Password" app:layout_constraintBottom_toTopOf="@+id/etpassword" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.186" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/etName" app:layout_constraintVertical_bias="0"/>
    <EditText android:textColor="@color/white" android:textColorHint="@color/white" android:id="@+id/etpassword" android:background="@drawable/costume_edittext" android:padding="10dp" android:layout_width="280dp" android:layout_height="49dp" android:layout_marginTop="48dp" android:minHeight="48dp" android:hint="@string/pass" android:ems="10" android:inputType="textPassword" android:autofillHints="Masukan Password" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.496" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/etName"/>
    <Button android:id="@+id/bt_signin" android:layout_width="279dp" android:layout_height="48dp" android:text="Sign In" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.507" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/etpassword" app:layout_constraintVertical_bias="0.177"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="#0099ff" android:id="@+id/textView4" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Register" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.713" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/bt_signin" app:layout_constraintVertical_bias="0.243"/>
    <TextView android:textColor="@color/biru" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="New to Todo App? " app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.433" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/bt_signin" app:layout_constraintVertical_bias="0.243"/>
</androidx.constraintlayout.widget.ConstraintLayout>
